# rapid-photo-downloader

./: .bzrignore  .gitattributes  .gitignore  AUTHORS  CHANGES.md  CHANGES.rst  HACKING  INSTALL.md  MANIFEST.in  README  README.md  README.rst  RELEASE_NOTES.md  RELEASE_NOTES.rst  TODO  exiftool-sources.json  exiftool.yaml  gstreamer.json  hatch_build.py  idletube.py  ifuse.yaml  install.py  install.sh  libmediainfo.yaml  media.py  metadata.py  net.damonlynch.rapid_photo_downloader copy.yaml  net.damonlynch.rapid_photo_downloader.yaml  pip-uninstall.py  pyproject.toml  python-arrow.yaml  python-gexiv2.yaml  python-gphoto2.yaml  python-hatchling-ext.yaml  python-hatchling.yaml  python-pygobject.yaml  python-pyzmq.yaml  rapid-photo-downloader  rapid-photo-downloader.desktop  rapid.py  (+10 more)
.github/: FUNDING.yml
data/: net.damonlynch.rapid-photo-downloader.appdata.xml.in  net.damonlynch.rapid-photo-downloader.desktop.in  net.damonlynch.rapid_photo_downloader.desktop.in  net.damonlynch.rapid_photo_downloader.metainfo.xml.in  rapid-photo-downloader.appdata.xml  rapid-photo-downloader.appdata.xml.in  rapid-photo-downloader.desktop  rapid-photo-downloader.desktop.in
data/icons/: rapid-photo-downloader.xpm
data/kde/: rapid-photo-downloader.desktop  rapid-photo-downloader.desktop.in
debian/: changelog  control  copyright  dirs  links  lintian-overrides  manpages  menu  py3dist-overrides  rapid-photo-downloader.1  rapid-photo-downloader.pod  rules  watch
doc/: analyze-pv-structure.1.pod  rapid-photo-downloader.1.pod  rapid-photo-downloader.pod
glade3/: rapid.glade  rapid.gladep.bak
po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  kab.po  nb.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  rapid-photo-downloader.pot  ro.po  ru.po  sk.po  sq.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
raphodo/: __about__.py  __init__.py  aboutdialog.py  analyzephotos.py  applefileconduit.py  argumentsparse.py  backupfile.py  backuppanel.py  cache.py  camera.py  cameraerror.py  chevroncombo.py  computerview.py  constants.py  copyfiles.py  customtypes.py  destinationdisplay.py  destinationpanel.py  destinationspace.py  devicedisplay.py  devices.py  didyouknow.py  downloadtracker.py  errorlog.py  excepthook.py  exiftool.py  expander.py  filebrowse.py  fileformats.py  filesystemurl.py  fileutilities.py  filmstrip.py  foldercombo.py  folderpreviewmanager.py  folderspreview.py  generatename.py  generatenameconfig.py  heif.py  interprocess.py  iplogging.py  (+52 more)
raphodo/internationalisation/: install.py  strings.py  utilities.py
raphodo/metadata/: exiftool.py  fileextensions.py  fileformats.py  metadataexiftool.py  metadataphoto.py  metadatavideo.py  otherextensions.py
raphodo/metadata/analysis/: analyzephotos.py  photoattributes.py  videoattributes.py
raphodo/prefs/: preferencedialog.py  preferences.py
raphodo/storage/: storage.py  storageidevice.py
raphodo/tests/: test_generatenameconfig.py  test_proximity.py  test_thumbnail.py  test_thumbnailpara.py  thumbnail_data_small
raphodo/tools/: cinnamonplatform.py  cosmicplatform.py  gnomeplatform.py  libraryversions.py  packageutils.py  platformtools.py  stateutils.py  timeutils.py  utilities.py  xsettings.py
raphodo/ui/: aboutdialog.py  backuppanel.py  chevroncombo.py  computerview.py  darkfusion.py  destinationdisplay.py  destinationpanel.py  devicedisplay.py  didyouknow.py  filebrowse.py  filmstrip.py  foldercombo.py  gnomepalette.py  jobcodepanel.py  menubutton.py  messages.py  messagewidget.py  nameeditor.py  panelview.py  password.py  primarybutton.py  rememberthisdialog.py  renamepanel.py  rotatedpushbutton.py  source.py  sourcepanel.py  spinner.py  spinnerwidget.py  splashscreen.py  stackedwidget.py  thiscomputer.py  toggleswitch.py  toggleview.py  viewconstants.py  viewutils.py
raphodo/wsl/: wsl.py  wslutils.py
rapid/: ChangeLog  INSTALL  TODO  ValidatedEntry.py  analyzephotos.py  backupfile.py  cache.py  camera.py  common.py  config.py  constants.py  copy.py  copyfiles.py  device.py  devicedisplay.py  devices.py  downloadtracker.py  dropshadow.py  errorlog.py  exiftool.py  expander.py  filebrowse.py  filemodify.py  fileutilities.py  filmstrip.py  generatename.py  generatenameconfig.py  generatenameconfigtest.py  gnomeglade.py  higdefaults.py  idletube.py  interprocess.py  media.py  metadata.py  metadataexiftool.py  metadataphoto.py  metadatavideo.py  metadataxmp.py  misc.py  mp-prototype.py  (+46 more)
rapid/glade3/: about.ui  about.ui.h  errorlog.ui  filmstrip-100x75.xpm  mp-prototype.glade  prefs.ui  prefs.ui.h  prototype.glade  rapid.glade  rapid.glade.bak  rapid.ui  rapid.ui.h  xmp.ui  xmp.ui.h
rapid/linux/: rapid-photo-downloader.desktop
rapid/rapid/: ChangeLog  INSTALL  __about__.py  cache.py  camera.py  constants.py  devices.py  errorlog.py  filemodify.py  filmstrip.py  metadatavideo.py  offload.py  preferencesdialog.py  rapid.py  renameandmovefile.py  rpdsql.py  utilities.py
rapid/tests/: test_proximity_kernprof_results.txt  test_thumbnail.py  test_thumbnailpara.py  thumbnail_data_small
share/applications/: net.damonlynch.rapid_photo_downloader.desktop
share/metainfo/: net.damonlynch.rapid_photo_downloader.metainfo.xml
share/solid/actions/: net.damonlynch.rapid_photo_downloader.desktop
snap/: snapcraft.yaml
tasks/: collect_filestats.py  generate.py
tools/: capture-screenshot.py  capture_screenshot.py  capture_wayland_screenshot.py  correct_permissions.py  downloadgitbutlerdeb.py  extract-po-files.py  extract_language_names.py  extract_po_files.py  install-language-pack.py  install_language_pack.py  log_file_extract.py  manage-application-images.py  manage_application_images.py
tools/ppa/: __init__.py  argumentsparse.py  buildconfig.py  config.toml  console.py  prepare_source_tarball_and_debian_folder.py
