[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapid-photo-downloader"
description = "Downloads, renames and backs up photos and videos from cameras, phones, memory cards and other devices."
readme = "README.md"
license = "GPL 3+"
requires-python = ">=3.10, <4"
authors = [
    { name = "Damon Lynch", email = "damonlynch@gmail.com" },
]
keywords = [
    "arw",
    "backup",
    "camera",
    "copy",
    "cr2",
    "cr3",
    "dng",
    "download",
    "import",
    "ingest",
    "nef",
    "phone",
    "photo",
    "photographer",
    "photography",
    "raw",
    "rename",
    "transfer",
    "video",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "arrow",
    "babel",
    "colour",
    "easygui",
    "gphoto2",
    "packaging",
    "psutil",
    "PyGObject",
    "pymediainfo",
    "PyQt5",
    "python-dateutil",
    "pyxdg",
    "pyzmq",
    "setuptools",
    "show-in-file-manager",
    "sortedcontainers",
    "tornado",
]

[project.optional-dependencies]
color_ouput = ["colorlog"]
progress_bar = ["pyprind"]

[project.gui-scripts]
rapid-photo-downloader = "raphodo.rapid:main"

[project.urls]
Issues = "https://bugs.rapidphotodownloader.com"
Homepage = "https://damonlynch.net/rapid"
Source = "https://github.com/damonlynch/rapid-photo-downloader"

[tool.hatch.version]
path = "raphodo.__about__.py"

[tool.hatch.build.targets.wheel.shared-data]
"build/share/applications" = "share/applications"
"build/share/solid/actions" = "share/solid/actions"
"build/share/metainfo" = "share/metainfo"

[tool.hatch.build.targets.sdist]
include = [
    "raphodo",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "po",
    "tests",
]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

builtins = ["ic", "_"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
